--- a/whenever.cabal
+++ b/whenever.cabal
@@ -11,7 +11,7 @@ License-File:       LICENSE
 Author:             Michael Tolly
 Maintainer:         tolly@wisc.edu
 Build-Type:         Simple
-Cabal-version:      >= 1.8
+Cabal-Version:      >= 1.8
 Category:           Data
 
 Library
@@ -20,13 +20,13 @@ Library
                     , transformers >= 0.3 && < 0.4
                     , random >= 1.0 && < 1.1
                     , array >= 0.4 && < 0.5
-  Exposed-modules:  Language.Whenever
+  Exposed-Modules:  Language.Whenever
                     Language.Whenever.Base
                     Language.Whenever.Scan
                     Language.Whenever.Parse
                     Language.Whenever.Unparse
-  hs-source-dirs:   src
-  ghc-options:      -Wall
+  Hs-Source-Dirs:   src
+  Ghc-Options:      -Wall
 
 Executable whenever
   Build-Depends:    base >= 4.6 && < 5
@@ -34,5 +34,5 @@ Executable whenever
   Main-Is:          whenever.hs
 
 Source-Repository head
-  type:             git
-  location:         http://github.com/mtolly/whenever
+  Type:             git
+  Location:         http://github.com/mtolly/whenever
