--- a/whenever.cabal
+++ b/whenever.cabal
@@ -20,6 +20,7 @@ Library
                     , transformers >= 0.3 && < 0.4
                     , random >= 1.0 && < 1.1
                     , array >= 0.4 && < 0.5
+                    , text >= 0.11 && < 0.12
   Exposed-Modules:  Language.Whenever
                     Language.Whenever.Base
                     Language.Whenever.Scan
