--- a/whenever.cabal
+++ b/whenever.cabal
@@ -34,6 +34,12 @@ Executable whenever
                     , whenever
   Main-Is:          whenever.hs
 
+Executable whenever-js
+  Build-Depends:    base >= 4.6 && < 5
+                    , ghcjs-base
+                    , whenever
+  Main-Is:          whenever-js.hs
+
 Source-Repository head
   Type:             git
   Location:         http://github.com/mtolly/whenever
